--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -249,3 +249,7 @@ body {
   margin: auto;
 }
 
+.example-left {
+  margin-top: 2.2rem;
+}
+
